--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main {
+    max-width: 1280px;
+    margin: 10px auto 0;
+    padding: 80px 10px;
+}
